; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/gcc/extr_emit-rtl.c_emit_call_insn.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/gcc/extr_emit-rtl.c_emit_call_insn.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @emit_call_insn(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %4 = load i32, i32* %2, align 4
  %5 = call i32 @GET_CODE(i32 %4)
  switch i32 %5, label %9 [
    i32 131, label %6
    i32 130, label %6
    i32 133, label %6
    i32 132, label %6
    i32 134, label %6
    i32 129, label %6
  ]

6:                                                ; preds = %1, %1, %1, %1, %1, %1
  %7 = load i32, i32* %2, align 4
  %8 = call i32 @emit_insn(i32 %7)
  store i32 %8, i32* %3, align 4
  br label %14

9:                                                ; preds = %1
  %10 = load i32, i32* %2, align 4
  %11 = call i32 @make_call_insn_raw(i32 %10)
  store i32 %11, i32* %3, align 4
  %12 = load i32, i32* %3, align 4
  %13 = call i32 @add_insn(i32 %12)
  br label %14

14:                                               ; preds = %9, %6
  %15 = load i32, i32* %3, align 4
  ret i32 %15
}

declare dso_local i32 @GET_CODE(i32) #1

declare dso_local i32 @emit_insn(i32) #1

declare dso_local i32 @make_call_insn_raw(i32) #1

declare dso_local i32 @add_insn(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
